Fix Spacing on My Account Page Past Orders Table

--- a/theme/templates/sese-bootstrap/sass/sese.sass
+++ b/theme/templates/sese-bootstrap/sass/sese.sass
@@ -209,3 +209,6 @@ div#stateLabel.visibleField
   /* Align the OrderTotals with the Item Totals on the Checkout Confirmation Page */
   .totalBox
     padding-right: 5px
+
+#accountDefault table#prevOrders address
+  margin-bottom: 0
